istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-vs
spec:
  hosts:
    - "*"
  gateways:
    - todo-gateway
  http:
    - match:
        - uri:
            prefix: /todo
      route:
        - destination:
            host: api-gateway
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: front-end
            port:
              number: 80
